	strings (such as the names vector) rather than assuming these
	are passed in.

    o	R_CheckUserInterrupts is now described in `Writing R Extensions'
	and there is a new equivalent subroutine rchkusr for calling
	from FORTRAN code.

    o	Salloc and Srealloc are provided in S.h as wrappers for S_alloc
	and S_realloc, since current S versions use these forms.


DEPRECATED & DEFUNCT

    o	print.coefmat() is defunct, replaced by printCoefmat().

    o	codes() and codes<-() are defunct.

    o	anovalist.lm (replaced in 1.2.0) is now defunct.

    o	glm.fit.null(), lm.fit.null() and lm.wfit.null() are defunct.

    o	print.atomic() is defunct.

    o	The command-line arguments --nsize and --vsize are no longer
	recognized as synonyms for --min-nsize and --min-vsize (which
	replaced them in 1.2.0).

    o	Unnecessary methods coef.{g}lm and fitted.{g}lm
	have been removed: they were each identical to the default
	method.

    o	La.eigen() is deprecated now eigen() uses LAPACK by default.


INSTALLATION CHANGES

    o	The defaults for configure are now --without-zlib
	--without-bzlib --without-pcre.	 PCRE >= 4.0 is now required:
	the included PCRE sources have been updated to version 4.5.

    o	configure no longer lists bzip2 and PCRE as `additional
	capabilities' as all builds of R have had them since 1.7.0.

    o	--with-blas=goto to use K. Goto's optimized BLAS will now work.


BUG FIXES

    o   minor copy-paste error in example(names) (PR#6594)

    o	contrasts() turns a logical variable into a factor.  This now
	always has levels c("FALSE", "TRUE") even if only one (or
	none) of these occur in the variable.

    o	model.frame()'s lm and glm methods had 'data' and 'na.action'
	arguments which they ignored and have been removed.

    o	The defaults data=list() in lm() and glm() could never be
	used and have been removed.  glm had na.action=na.fail, again
	never used.

    o	tools:::.getInternalS3generics() was omitting all the members